[package]
name = "codepage-strings"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/BartMassey/codepage-strings"
readme = "README.md"
description = "encode / decode strings for Windows code pages"
categories = ["internationalization", "text-processing"]
publish = false

[badges.maintenance]
status = "actively-developed"

[dependencies]
codepage = "0.1.1"
encoding_rs = "0.8.28"
oem_cp = "1.1.0"

[dev-dependencies]
version-sync = "0.9"
